<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.android.mvpdemo.View.MainActivity">

    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/pick_a_color"
        android:textSize="@dimen/sp16" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20">

        <RadioButton
            android:id="@+id/red_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textAllCaps="true"
            android:textSize="@dimen/sp16" />

        <RadioButton
            android:id="@+id/blue_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/blue"
            android:textAllCaps="true"
            android:textSize="@dimen/sp16" />

        <RadioButton
            android:id="@+id/yellow_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/yellow"
            android:textAllCaps="true"
            android:textSize="@dimen/sp16" />

    </RadioGroup>

    <Button
        android:id="@+id/change_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_color" />

</LinearLayout>
